# ghost2hugo

./: .gitignore  LICENSE  README.md  config.example.yaml  exclude.example.txt  pyproject.toml
ghost_to_hugo/: __init__.py  __main__.py  assemble.py  assets.py  ast_types.py  cards.py  cli.py  config.py  extract.py  html_clean.py  normalize.py  pipeline.py  r2.py  render.py  report.py  state.py  typography.py  validate.py  verify.py
ghost_to_hugo/parsers/: __init__.py  html_fallback.py  lexical.py  mobiledoc.py
tests/: run_e2e.sh  test_units.py
tests/fixtures/: build_fixture.py  config.yaml
tests/hugo-skeleton/: hugo.toml
tests/hugo-skeleton/layouts/_default/: baseof.html  list.html  single.html
tests/hugo-skeleton/layouts/shortcodes/: attachment.html  audio.html  bookmark.html  callout.html  embed.html  gallery-item.html  gallery.html  toggle.html  video.html
