[project]
name = "ghost-to-hugo"
version = "0.1.0"
description = "Mature Ghost CMS → Hugo migration tool with layered pipeline, R2 asset upload, and full verification."
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "PyYAML>=6.0",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "python-frontmatter>=1.1",
    "Pillow>=10.0",
    "rich>=13.0",
]

[project.scripts]
ghost-to-hugo = "ghost_to_hugo.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ghost_to_hugo*"]
